--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document Git</title>
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <h1>这是一个H1标题</h1>
 
-    <script src="./index.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
